# pre-commit-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README  README.md  setup.cfg  setup.py  tlv_set_git_vars.py
pre_commit_hooks/: tlv_deb_copyright_year.py  tlv_deb_run_lrc.py  tlv_deb_standards_version.py  tlv_deb_version_fixer.py  tlv_set_git_vars.py
