[metadata]
name = pre_commit_hooks
version = 0.0.0
description = Personal pre-commit hoks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mleeman/pre-commit-hooks
author = Marc Leeman
author_email = marc.leeman@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.15
    tomli>=1.1.0;python_version<"3.11"
python_requires = >=3.9

[options.entry_points]
console_scripts =
    tlv-set-git-vars = pre_commit_hooks.tlv_set_git_vars:main
    tlv-deb-copyright-year = pre_commit_hooks.tlv_deb_copyright_year:main
